26 May 2005 Sylvain Pion
- Add Dimension<> tool to get the static dimension of kernel objects.

19 May 2005 Sylvain Pion
- Add centroid(Triangle_[23]) and centroid(Tetrahedron_3).

11 May 2005 Sylvain Pion
- New predicates : orientation(3 Vector_3) and orientation(2 Vector_2).

26 April 2005 Sylvain Pion
- Fix rational_rotation bug (by Daniel).

26 March 2005 Sylvain Pion
- Handle_for : remove "optimization" of default ctor.
  It's painful to use, and is there really a need to optimize default ctors ?

8 March 2005 Sylvain Pion
- Add do_intersect(Triangle_3, Tetrahedron_3) by Nico Kruithof.

6 February 2005 Sylvain Pion
- Rewrite known_bit_size_integers.h using MPL to help portability.

============================= CGAL 3.1 ===========================

2 December 2004 Sylvain Pion
- Doc : clarify that RT/FT are coming from Kernel::.

20 November 2004 Sylvain Pion
- x86_64 porting.

5 November 2004 Sylvain Pion
- Fix alphabetical order in the concepts list.

20 September 2004 Sylvain Pion
- Exact_predicates_exact_constructions_kernel : use Filtered_kernel on top.
- test/Filtered_cartesian : test Exact_predicates_exact_constructions_kernel.

17 September 2004 Sylvain Pion
- #include <CGAL/Origin.h> instead of declaring types.

14 September 2004 Sylvain Pion
- Exact_predicates_inexact_constructions_kernel : now uses Filtered_kernel
  instead of Filtered_exact (benefits from static filters).
- Filtered_kernel_without_type_equality renamed to Filtered_kernel_adaptor.
- More global functions call the functors.

13 September 2004 Andreas Fabri
- Added construct_min/max_vertex_2/3 in the kernel archetype interface macros

7 September 2004 Andreas Fabri
- Added functions and functor for constructing min and max vertex of iso rectangle and cuboid

5 September 2004 Menelaos Karavelas & Sylvain Pion
- excluded unsigned numbers from being models of RingNumberType

4 September 2004 Menelaos Karavelas
- re-wrote author names in copyright notices using 7-bit characters
